--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,15 @@
        height: 400px;
        border: solid 1px #0F0;
      }
+     span {
+       margin: 10px;
+       padding: 5px;
+       display: inline-block;
+       font-family: sans-serif;
+       background: rgba(0,0,0,0.5);
+       color: #FFF;
+       font-weight: bold;
+     }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="../parallax.js"></script>
@@ -16,9 +25,13 @@
     <div></div>
     <div></div>
     <div></div>
-    <div class="test parallax" data-parallax-img="grid.jpg" data-parallax-img-width="1024" data-parallax-img-height="1024">Square test</div>
-    <div></div>
-    <div class="test parallax" data-parallax-img="width.png" data-parallax-img-width="1920" data-parallax-img-height="1080">Width test</div>
+    <div class="test parallax" data-parallax-img="grid.jpg" data-parallax-img-width="1024" data-parallax-img-height="1024"><span>square</span></div>
+    <div class="test parallax" data-parallax-img="width.png" data-parallax-img-width="1920" data-parallax-img-height="1080"><span>fullhd</span></div>
+    <div class="test parallax" data-parallax-img="grid2.jpg" data-parallax-img-width="731" data-parallax-img-height="748"><span>almost square</span></div>
+    <div class="test parallax" data-parallax-img="keyboard.gif" data-parallax-img-width="598" data-parallax-img-height="253"><span>small</span></div>
+    <div class="test parallax" data-parallax-img="hobbit-wide.jpg" data-parallax-img-width="6735" data-parallax-img-height="900"><span>wide</span></div>
+    <div class="test parallax" data-parallax-img="hobbit-wide.jpg" data-parallax-img-width="6735" data-parallax-img-height="900" data-parallax-expand="1.5"><span>wide with 1.5 expand</span></div>
+    <div class="test parallax" data-parallax-img="hobbit-tall.jpg" data-parallax-img-width="656" data-parallax-img-height="1458"><span>tall</span></div>
     <div></div>
     <div></div>
     <div></div>
